  to specific values. Thanks to @PHRaposo for [[https://github.com/swapneils/screamer/issues/10][the report]].
- Bugfix: Missing ~local~ declarations have been added to some
  restrict-domain functions, preventing restrictions from one
  nondeterministc path affecting the following pathways. Thanks
  to @PHRaposo for [[https://github.com/swapneils/screamer/issues/10][the report]].
* 5.2 (screamer/core v5.2)
Reverted incompatible change to ~ITH-VALUE~, create ~KTH-VALUE~ and deprecate
~ITH-VALUE~
* 5.1.3 (screamer/core v5.1.1, highlights from screamer/experimental)
Names of sub-systems have been modified to use the ~/<subsection>~
format, per Common Lisp convention.
** screamer/core
- (Untested) Experimental support for ~macrolet~ and ~symbol-macrolet~ forms!
  - This has been tracked as an action item since Screamer 3,
  - Note that (within ~local~ declarations) basic ~trivia~ and ~iterate~ forms
    have been confirmed to work correctly in nondeterministic contexts after
    this change.
  - LOOP may still not work correctly depending on your implementation, however;
    on SBCL at least this appears to be a separate issue from macrolets.
- (Untested) Portable support for deterministic usage of ~handler-bind~,
  ~handler-case~, ~restart-case~, and ~ignore-errors~ within Screamer forms.
  - The creation of choice-points or calling of nondeterministic functions
    within these forms is still not supported!
- Changes to how Screamer works internally to support other extensions
  - ~*nondeterministic-context*~ is now a hash-table when non-NIL, and contains
    some information about the current nondeterministic context. This information
    should not be modified outside of Screamer, but can be read by both users
    and Screamer-internal functionality.
  - Screamer now uses the ~screamer::escape~ and ~screamer::%escape~ symbols
    for internal control flow.
- Changes to some examples in ~doc~
- Fixes for some previously-undiscovered issues in screamer-core leading